      Operations guide

   .. replacement:: k8s-link

      the :ref:`MONGODB-OIDC: Kubernetes <kotlin-auth-kubernetes>`
      section of the Enterprise Authentication Mechanisms guide

   .. replacement:: atlas-query-operators

      the `SearchOperator <{+core-api+}/client/model/search/SearchOperator.html>`__
      interface API documentation

.. _kotlin-coroutine-version-5.3:

What's New in 5.3
-----------------

The 5.3 driver release includes the following new features,
improvements, and fixes:

.. sharedinclude:: dbx/jvm/v5.3-wn-items.rst

   .. replacement:: vector-type-example-link

      To learn about how to use this type when using the Atlas
      Vector Search feature, see the :ref:`kotlin-atlas-vector-search`
      guide.

   .. replacement:: update-replace-example-link
      
      the :ref:`kotlin-fundamentals-change-document` and :ref:`kotlin-fundamentals-bulkwrite` 
      guides

- Support for using builders class methods directly with data class
  properties. To learn more, see the :ref:`kotlin-builders-data-classes`
  guide. This functionality is supported by the `{+driver-short+}
  Extensions package <{+api-root+}/mongodb-driver-kotlin-extensions/index.html>`__
  published with this release.

- Implements a *client* bulk write API that allows you to perform write
  operations on multiple databases and collections in the same call. To learn
  more about this feature, see the :ref:`kotlin-client-bulk-write`
  section of the Bulk Operations guide.

.. _kotlin-coroutine-version-5.2:

What's New in 5.2
-----------------

.. important:: Removal of Support for {+mdb-server+} 3.6

   {+driver-short+} v5.2 removes support for {+mdb-server+} 3.6. To
   learn more about compatible versions of the server, see
   :ref:`kotlin-compatibility-tables`.

The 5.2 driver release includes the following new features,
improvements, and fixes:

.. sharedinclude:: dbx/jvm/v5.2-wn-items.rst

   .. replacement:: csot-link

      the :ref:`kotlin-csot` guide
