@@ -3,8 +3,10 @@ data class Results(@BsonId val id: Int, val count: Int)
 val resultsFlow = collection.aggregate<Results>(
     listOf(
         Aggregates.match(Filters.eq(Restaurant::categories.name, "Bakery")),
-        Aggregates.group("\$${Restaurant::stars.name}",
-            Accumulators.sum("count", 1))
+        Aggregates.group(
+            "\$${Restaurant::stars.name}",
+            Accumulators.sum("count", 1)
+        )
     )
 )
 
