@@ -215,6 +215,9 @@ first element in the ``categories`` field.
       Results(name=456 Cookies Shop, firstCategory=Bakery)
       Results(name=XYZ Steak Buffet, firstCategory=Steak)
 
+API Documentation
+-----------------
+
 For more information about the methods and classes mentioned in this section,
 see the following API Documentation:
 
